# shadertool_uni

./: CMakeLists.txt  Makefile  README.html  README.md
data/: cars.webm  cars2.webm  cars3.webm
data/lores/: cars.webm
docs/opis/: Makefile  opis.html  opis.md
scripts/: blend.glsl  blend.script  blur.glsl  blur.script  copy.glsl  copy.script  dot.glsl  sim.glsl  sim.script  stereo.glsl  stereo.script  waves.glsl  waves.script
src/: main.cc
src/cmdline/: args.cc  args.hpp
src/fs/: path.hpp  read.hpp  remote_path.cc  remote_path.hpp
src/graphics/: render_device.cc  render_device.hpp  render_target.hpp  shader.cc  shader.hpp  shader_program.cc  shader_program.hpp
src/script/: directives.cc  directives.hpp  file.cc  file.hpp  instructions.cc  instructions.hpp  interpreter.cc  interpreter.hpp  parser.cc  parser.hpp  register.hpp
src/video/: frame.cc  frame.hpp  frame_sink.cc  frame_sink.hpp  frame_source.cc  frame_source.hpp  video.hpp
